--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.28.1",
     "@types/node": "^16.11.7",
     "@types/redis": "^2.8.32",
     "@types/socket.io": "^3.0.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "ioredis": "^4.27.9",
     "redis": "^3.1.2",
